--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,135 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+body{
+  background:#ffff ;
+  color: black;
+  font-family: "Oswald", sans-serif;
+  font-weight: 300;
+}
+
+.Shops{
+  width: 1280px;
+  margin: 50px auto;
+}
+
+.logo{
+  font-weight: 600;
+  font-size: 20px;
+}
+.li:hover{
+  opacity: 0.5;
+}
+
+.nav {
+  float:right;
+  list-style: none;
+}
+
+.li{
+  display: inline;
+  margin-left: 25px;
+  cursor: pointer;
+
+}
+
+div.presentation {
+  margin: 50px 0;
+  background: url('./img/png2.jpg');
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  background-position: center center;
+  background-blend-mode: multiply;
+  background-color: aliceblue;
+  position: relative;
+}
+
+
+div.presentation::after{
+  content: 'Все самое нтересное';
+  position: absolute;
+  top: 100px;
+  left: 50px;
+  font-size: 40px;  
+  font-weight:600;
+  color: #ffff;
+}
+
+div.presentation::before {
+  content: 'Умар на час';
+  position: absolute;
+  top: 150px; 
+  left: 50px;
+  font-size: 40px;
+  font-weight: 600;
+  color: #ffff;
+}
+
+main{
+  display: flex;
+  width: 100px;
+  flex-wrap: wrap;
+  justify-content:space-between;
+}
+
+ main .item{
+  width: 30px;
+  margin-bottom: 50px;
+  background: #f5f5f5;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+
+  main  .item img{
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+  transition: transform 500ms ease;
+}
+
+  main .item img:hover{
+  transform: scale(1.05)
+}
+
+main h2,
+main p,
+main b{
+  margin: 10px 20px;
+  color: #333;
+}
+
+main b{
+  color: #5fa365;
+}
+
+main .add-to-cart{
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  background: #ca525c;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  line-height: 35px;
+  color: #ffff;
+  border-radius: 50%;
+  cursor: pointer;
+  font-weight: 600;
+  transition: transform 500ms ease;
+}
+main .add-to-cart:hover{
+  transform: scale(1.5) translateY(-5x);
+}
+
+.footer{
+  text-align: center;
+  margin-top: 10px;
 }
