--- a/src/index.css
+++ b/src/index.css
@@ -8,15 +8,26 @@
 
 
 body{
-  background:#ffff ;
+  background:#dc9a00b5 ;
   color: black;
   font-family: "Oswald", sans-serif;
   font-weight: 300;
+}
+.logo-image {
+  width: 40px; 
+  height: 40px; 
+  margin-right: 8px; 
+  position: relative;
+  top:10px;
+  border-radius: 50%
 }
 
 .Shops{
   width: 1280px;
   margin: 50px auto;
+}
+header{
+  position: relative;
 }
 
 .logo{
@@ -27,6 +38,18 @@ body{
   opacity: 0.5;
 }
 
+header .shop-card-button{
+  padding: 5px;
+  float:right;
+  cursor: pointer;
+  transition: color,  transfor 500ms ease;
+}
+
+header .shop-card-button:hover,
+header .shop-card-button:active{
+color: red;
+transform: scale(1.5);
+}
 .nav {
   float:right;
   list-style: none;
@@ -49,6 +72,7 @@ div.presentation {
   background-blend-mode: multiply;
   background-color: aliceblue;
   position: relative;
+  border-radius: 15px;
 }
 
 
@@ -72,45 +96,142 @@ div.presentation::before {
   color: #ffff;
 }
 
-main{
+
+header .shop-cart{
+  position: absolute;
+  top: 30px;
+  right: 0;
+  width: 450px;
+  min-height: 100px;
+  background: #3e3838;
+  -webkit-box-shadow:4px 5px 15px -7px #606060;
+  box-shadow: 4px 5px 15px -7px #606060;
+  z-index: 10000;
+
+  padding: 20px;
+  padding-bottom: 0;
+}
+
+header .shop-cart .item{
+  width: 100%;
+  float: left;
+  margin-bottom: 20px;
+}
+header .shop-cart .item img{
+  width: 70px;
+  float: left;
+  margin-right: 20px;
+  cursor: pointer;
+  border-radius: 15px;
+}
+header .shop-cart .item h2{
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+header .shop-cart .item b{
+  color: green;
+  font-weight: 600;
+}
+header .shop-cart{
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+header .shop-cart .item .delete-icon,
+.full-item header .shop-cart .item .delete-icon
+{
+  color: #ca525c;
+  float: right;
+  position: relative;
+  top: -25px;
+  cursor: pointer;
+  transition: color,  transfor 500ms ease;
+}
+
+header .shop-cart .item .delete-icon:hover,
+.full-item header .shop-cart .item .delete-icon:hover{
+  color: #dc1929;
+  transform: scale(1.5);
+}
+
+header .shop-cart .summa,
+.full-item header .shop-cart .summa{
+  float: left;
+  width: 100%;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.categories div,
+.full-item .categories div{
+  display: inline;
+  background:#f5f5f5;
+  border-radius: 50px;
+  padding: 10px 20px;
+  margin-bottom: 25px;
+  margin-right: 15px;
+  cursor: pointer;
+  border: 1px solid transparent;
+  transition: all 500ms ease;
+}
+
+.categories div:hover,
+.full-item .categories div:hover{
+  border-color: silver;
+  transform: scale(1.1);
+}
+
+
+main,
+.full-item main{
   display: flex;
-  width: 100px;
+  width: 100%;
+  padding: 35px 0 0;
   flex-wrap: wrap;
   justify-content:space-between;
 }
 
- main .item{
-  width: 30px;
+ main .item,
+ .full-item main .item{
+  width: 30%;
   margin-bottom: 50px;
-  background: #f5f5f5;
+  background: #aea1a1e2;
   overflow: hidden;
   position: relative;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
+  border-radius: 15px;
 }
 
 
-  main  .item img{
+main .item img,
+.full-item main .item img{
   width: 100%;
   border-radius: 10px 10px 0 0;
   transition: transform 500ms ease;
+  cursor: pointer;
 }
 
-  main .item img:hover{
+main .item img:hover,
+.full-item main .item img:hover
+{
   transform: scale(1.05)
 }
 
-main h2,
-main p,
-main b{
+main h2,.full-item h2,
+main p,.full-item p,
+main b,.full-item b{
   margin: 10px 20px;
   color: #333;
 }
 
-main b{
+main b,
+.full-item b {
   color: #5fa365;
 }
 
-main .add-to-cart{
+main .add-to-cart,
+.full-item .add-to-cart{
   position: absolute;
   right: 20px;
   bottom: 20px;
@@ -125,7 +246,8 @@ main .add-to-cart{
   font-weight: 600;
   transition: transform 500ms ease;
 }
-main .add-to-cart:hover{
+main .add-to-cart:hover,
+.full-item main .add-to-cart:hover{
   transform: scale(1.5) translateY(-5x);
 }
 
