--- a/src/index.css
+++ b/src/index.css
@@ -62,51 +62,58 @@ transform: scale(1.5);
 
 }
 
-div.presentation {
+.presentation {
   margin: 50px 0;
-  background: url('./img/png2.jpg');
   width: 100%;
   height: 500px;
+  position: relative;
+  border-radius: 15px;
   background-size: cover;
   background-position: center center;
   background-blend-mode: multiply;
   background-color: aliceblue;
-  position: relative;
-  border-radius: 15px;
+  transition: background-image 1s ease-out; 
 }
 
 
-div.presentation::after{
-  content: 'Все самое нтересное';
+
+
+.text-overlay {
+  position: relative;
+  z-index: 1;
+}
+
+.text1 {
   position: absolute;
   top: 100px;
   left: 50px;
-  font-size: 40px;  
-  font-weight:600;
-  color: #ffff;
+  font-size: 40px;
+  font-weight: 600;
+  color: #fff;
 }
 
-div.presentation::before {
-  content: 'Умар на час';
+.text2 {
   position: absolute;
-  top: 150px; 
+  top: 150px;
   left: 50px;
   font-size: 40px;
   font-weight: 600;
-  color: #ffff;
+  color: #fff;
 }
 
 
 header .shop-cart{
   position: absolute;
-  top: 30px;
+  top: 25px;
   right: 0;
   width: 450px;
-  min-height: 100px;
-  background: #3e3838;
+  min-height: 80px;
+  background: #cccccc;
   -webkit-box-shadow:4px 5px 15px -7px #606060;
   box-shadow: 4px 5px 15px -7px #606060;
-  z-index: 10000;
+  z-index: 1000;
+  border-radius: 15px;
+  
 
   padding: 20px;
   padding-bottom: 0;
@@ -137,9 +144,7 @@ header .shop-cart{
   margin-bottom: 20px;
 }
 
-header .shop-cart .item .delete-icon,
-.full-item header .shop-cart .item .delete-icon
-{
+header .shop-cart .item .delete-icon{
   color: #ca525c;
   float: right;
   position: relative;
@@ -148,14 +153,12 @@ header .shop-cart .item .delete-icon,
   transition: color,  transfor 500ms ease;
 }
 
-header .shop-cart .item .delete-icon:hover,
-.full-item header .shop-cart .item .delete-icon:hover{
+header .shop-cart .item .delete-icon:hover{
   color: #dc1929;
   transform: scale(1.5);
 }
 
-header .shop-cart .summa,
-.full-item header .shop-cart .summa{
+header .shop-cart .summa{
   float: left;
   width: 100%;
   font-weight: 600;
@@ -163,8 +166,7 @@ header .shop-cart .summa,
   margin-bottom: 20px;
 }
 
-.categories div,
-.full-item .categories div{
+.categories div{
   display: inline;
   background:#f5f5f5;
   border-radius: 50px;
@@ -176,15 +178,13 @@ header .shop-cart .summa,
   transition: all 500ms ease;
 }
 
-.categories div:hover,
-.full-item .categories div:hover{
+.categories div:hover{
   border-color: silver;
   transform: scale(1.1);
 }
 
 
-main,
-.full-item main{
+main{
   display: flex;
   width: 100%;
   padding: 35px 0 0;
@@ -192,8 +192,7 @@ main,
   justify-content:space-between;
 }
 
- main .item,
- .full-item main .item{
+ main .item{
   width: 30%;
   margin-bottom: 50px;
   background: #aea1a1e2;
@@ -203,24 +202,42 @@ main,
   border-radius: 15px;
 }
 
+.full-item {
+  position: fixed;
+  top: 0;
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+  overflow: auto;
+}
+
+.full-item > div {
+  width: 600px;
+  position: relative;
+  margin: 10% auto;
+  padding: 40px 30px;
+  background: #fff;
+  border-radius: 9px;
+}
+
 
 main .item img,
-.full-item main .item img{
+.full-item img{
   width: 100%;
   border-radius: 10px 10px 0 0;
   transition: transform 500ms ease;
   cursor: pointer;
 }
 
-main .item img:hover,
-.full-item main .item img:hover
-{
+main .item img:hover{
   transform: scale(1.05)
 }
 
 main h2,.full-item h2,
-main p,.full-item p,
-main b,.full-item b{
+main p, .full-item p,
+main b , .full-item b{
   margin: 10px 20px;
   color: #333;
 }
@@ -247,9 +264,11 @@ main .add-to-cart,
   transition: transform 500ms ease;
 }
 main .add-to-cart:hover,
-.full-item main .add-to-cart:hover{
-  transform: scale(1.5) translateY(-5x);
+.full-item .add-to-cart:hover{
+  background: #dc1929;
+  transform: scale(1.2);
 }
+
 
 .footer{
   text-align: center;
