--- a/src/index.css
+++ b/src/index.css
@@ -136,7 +136,7 @@ header .shop-cart .item h2{
   margin-bottom: 10px;
 }
 header .shop-cart .item b{
-  color: green;
+  color: rgb(0, 134, 0);
   font-weight: 600;
 }
 header .shop-cart{
@@ -168,7 +168,7 @@ header .shop-cart .summa{
 
 .categories div{
   display: inline;
-  background:#f5f5f5;
+  background:#fff;
   border-radius: 50px;
   padding: 10px 20px;
   margin-bottom: 25px;
@@ -177,6 +177,17 @@ header .shop-cart .summa{
   border: 1px solid transparent;
   transition: all 500ms ease;
 }
+.icon-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.icon-container img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
 
 .categories div:hover{
   border-color: silver;
@@ -195,7 +206,7 @@ main{
  main .item{
   width: 30%;
   margin-bottom: 50px;
-  background: #aea1a1e2;
+  background: #fff;
   overflow: hidden;
   position: relative;
   padding-bottom: 50px;
@@ -239,12 +250,12 @@ main h2,.full-item h2,
 main p, .full-item p,
 main b , .full-item b{
   margin: 10px 20px;
-  color: #333;
+  color: #333;  
 }
 
 main b,
 .full-item b {
-  color: #5fa365;
+  color: #007d0a;
 }
 
 main .add-to-cart,
@@ -270,7 +281,52 @@ main .add-to-cart:hover,
 }
 
 
-.footer{
-  text-align: center;
-  margin-top: 10px;
+.footer {
+  background-color:#8d8d8d;
+  padding: 40px 0; 
+  border-radius: 5px;
 }
+
+.footer__top {
+  padding-bottom: 20px; 
+}
+
+.footer__bottom {
+  background-color: #00000052;
+  color: #ffffff; 
+  padding: 20px 0; 
+}
+.footer p{
+  color: #1d1d1e; 
+  font-size: 16px; 
+}
+
+.container {
+  width: 100%; 
+  padding-right: 15px; 
+  padding-left: 15px;
+  margin-right: auto; 
+  margin-left: auto; 
+}
+
+.row {
+  display: flex; 
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.col-md-4 {
+  flex: 0 0 33.333333%; 
+  max-width: 33.333333%;
+  padding-right: 15px;
+  padding-left: 15px; 
+}
+
+.col-md-12 {
+  flex: 0 0 100%;
+  max-width: 100%; 
+  padding-right: 15px; 
+  padding-left: 15px; 
+}
+
