--- a/src/index.css
+++ b/src/index.css
@@ -170,7 +170,7 @@ header .shop-cart .summa{
   display: inline;
   background:#fff;
   border-radius: 50px;
-  padding: 10px 20px;
+  padding: 10px 10px;
   margin-bottom: 25px;
   margin-right: 15px;
   cursor: pointer;
@@ -180,18 +180,28 @@ header .shop-cart .summa{
 .icon-container {
   display: flex;
   justify-content: space-around;
+  gap: 20px; 
 }
 
 .icon-container img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  transition: transform 0.3s ease;
+}
+
+
+.icon-container img:hover {
+  transform: scale(1.1); 
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+
 }
 
 
 .categories div:hover{
   border-color: silver;
-  transform: scale(1.1);
+  transform: scale(1.5);
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
 }
 
 
@@ -263,7 +273,7 @@ main .add-to-cart,
   position: absolute;
   right: 20px;
   bottom: 20px;
-  background: #ca525c;
+  background: #2d2d2d;
   width: 35px;
   height: 35px;
   text-align: center;
@@ -276,8 +286,9 @@ main .add-to-cart,
 }
 main .add-to-cart:hover,
 .full-item .add-to-cart:hover{
-  background: #dc1929;
+  background: #dcca00b5;
   transform: scale(1.2);
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
 }
 
 
