--- a/src/index.css
+++ b/src/index.css
@@ -528,9 +528,8 @@ main .add-to-cart:hover,
 }
 
 .reviews-list{
-  display: flex;
-align-content: space-between;
   border-radius: 5px;
+  font-weight: 400;
   list-style: none;
   padding: 10px;
 }
@@ -548,3 +547,31 @@ align-content: space-between;
   padding: 4px;
 }
 
+.quantity-controls {
+  display: flex;
+  align-items: center;
+}
+
+.quantity-controls button {
+  margin: 0 5px;
+  padding: 5px 10px;
+  background-color: #646464;
+  border: none;
+  cursor: pointer;
+}
+
+.quantity-controls span {
+  margin: 0 10px;
+  font-size: 16px;
+}
+.addd{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius:5px ;
+  width: 30px;
+  height: 30px;
+  bottom: 10px;
+  padding: 5px;
+
+}
